...
        )
    }

    override fun onKeyDown(keyCode: Int, event: KeyEvent): Boolean {
        if (event.repeatCount == 0) {
            if (keyCode == 4) {
                back()
            }
        }
        return true
    }

    fun scanTrigger() {
...

                            if (openShelfExitFocus) {
                                SimpleTextField(
                                    modifier = Modifier
                                        .padding(start = 16.dp, end = 16.dp)
                                        .fillMaxWidth()
                                        .testTag("CustomTextField"),
                                    hint = "ورود به قفسه",
                                    onValueChange = {
                                        enterShelfCode = it
                                    },
                                    value = enterShelfCode,
                                    onDone = {
...

                                Button(
                                    onClick = {
                                        exitProductFromshelf()
                                    }, modifier = Modifier
                                        .padding(top = 10.dp, end = 16.dp)
                                        .testTag("notConfirm")
                                )
                                {
                                    if (!openShelfExitFocus) Text(text = "خیر") else Text(text = "انصراف")
                                }
                                Button(
                                    onClick = {
...
                                        } else {
                                            addProductToOtherShelf()
                                        }
                                    },
                                    modifier = Modifier
                                        .padding(top = 10.dp)
                                        .testTag("confirm")
                                ) {
                                    if (!openShelfExitFocus) Text("بله") else Text("ورود")
                                }
                            }
                        }
                    }
                )
            } else {
...
                if (uiList.isEmpty()) {
                    EmptyBox(text = "کالایی در این قفسه وجود ندارد")
                } else {
                    LazyColumn(
                        modifier = Modifier.testTag("RefillActivityLazyColumn")
                    ) {
                        items(uiList.size) { i ->
                            LazyColumnItem(i)
                        }
                    }
                }
            }
        }
...
