...
                            }

                            Button(onClick = {
                                if (products.filter { it1 ->
                                        it1.scannedNumber > 0
                                    }.toMutableStateList().isEmpty()) {
                                    showLog("هنوز کالایی برای ارسال اسکن نکرده اید", state)
                                } else {
                                    scanningMode = false
                                    if (barcode.isEnabled) {
                                        barcode.disable()
                                    }
                                }

                            }) {
                                Text(text = "ارسال به فروشگاه")
                            }
                        }
                    }
                }
            } else {
                if (uiList.filter { it1 ->
...
