...

        Button(
            modifier = Modifier
                .padding(start = 16.dp, end = 16.dp, top = 8.dp, bottom = 8.dp)
                .align(Alignment.Center)
                .fillMaxSize()
                .testTag("bottomBarButton"),
            onClick = onClick
        ) {
            Text(
                text = text,
                style = MaterialTheme.typography.bodyMedium
            )
...
            }
        },

        actions = {

            IconButton(
                modifier = Modifier.testTag("deleteButton"),
                onClick = {
                    onDeletePressed()
                }) {
                Icon(
                    imageVector = Icons.Filled.Delete,
                    contentDescription = ""
...
